Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants
TODO: add debug/trace logging to some modules

	- escape any nonprintable/nonascii characters when stringifying
          backtraces.

6.1  Tue Oct  4 19:44:30 CEST 2011
	- INCOMPATIBLE CHANGE: the default log level is now "4" (error
          and above), and some messages inside AnyEvent have been elevated
          to higher log levels to print by default.
        - AnyEvent::log, unlike AnyEvent::Log::log, did not always exit on fatal.
        - work around yet another signal race bug, newly introduced by POE. My
          how that module sucks.
        - add google public ipv6 dns as fallback servers, so AE::DNS can finally
          support ipv6-only operation even with defaults (also use ::1 instead
          of 127.0.0.1).
	- give better guidelines on how to chose a logging level.
        - AnyEvent::Log can now cap (limit) log message priority by context.
        - AE::log will now save and restore $! and $@, so callers don't have to.
        - AE::Strict now checks that registered fds are still valid at regular
          intervals.
        - skip frequently called 'require' calls if the module appears loaded.
	- increase signal latency test timer considerably for poor little osx,
          which can't be bothered with basic posix functionality such as signal
          delivery.
        - mention some debugging aids in the tutorial.
        - new env variable PERL_ANYEVENT_MAX_SIGNAL_LATENCY.
        - private (%namespace) log contexts in PERL_ANYEVENT_LOG now have the name
          of the context as title.
        - AnyEvent::Strict would not restore read-write access to $_ when a callback
          died - this is a user bug, but since AE::Strict exists to help dbeugging...
	- detect the extremely evil IO::Async::Loop::AnyEvent module and refuse
          to work with it - the author is well aware of the issues but refuses