@@ -3,8 +3,11 @@ Revision history for Perl extension AnyEvent.
 TODO: document TCP_*** constants
 TODO: add debug/trace logging to some modules
 
+	- Tk cannot create windows when tainted unless you set a title, so
+          set a dummy title for AnyEvent's dummy mainwindow. How dummy.
 	- escape any nonprintable/nonascii characters when stringifying
           backtraces.
+        - log the reason loading an interface module fails to load at level debug.
 
 6.1  Tue Oct  4 19:44:30 CEST 2011
 	- INCOMPATIBLE CHANGE: the default log level is now "4" (error
